# prog2

./: CMakeLists.txt  IDEAS.md  README.md
src/: main.c
